--- a/resources/style.css
+++ b/resources/style.css
@@ -14,6 +14,7 @@ p {
 h1, h2, h3, h4, h5 {
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 0;
+    margin-top: 15px;
 }
 
 .container {
@@ -175,4 +176,108 @@ button.active, .radio-button.active {
     padding: 5px;
     font-size: 1.15rem;
     margin-bottom: 8px !important;
+}
+
+
+/* Intensity fader */
+#intensityFader {
+    height: 47px;
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
+}
+
+#intensityFader:focus {
+    outline: none;
+}
+
+#intensityFader::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 15px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000;
+    background: #c2c2c2;
+    border-radius: 5px;
+    border: 1px solid #000000;
+}
+
+#intensityFader::-webkit-slider-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -13.5px;
+}
+
+#intensityFader:focus::-webkit-slider-runnable-track {
+    background: #c2c2c2;
+}
+
+#intensityFader::-moz-range-track {
+    width: 100%;
+    height: 15px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000;
+    background: #c2c2c2;
+    border-radius: 5px;
+    border: 1px solid #000000;
+}
+
+#intensityFader::-moz-range-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    background: #ffffff;
+    cursor: pointer;
+}
+
+#intensityFader::-ms-track {
+    width: 100%;
+    height: 15px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+#intensityFader::-ms-fill-lower {
+    background: #c2c2c2;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px #000000;
+}
+
+#intensityFader::-ms-fill-upper {
+    background: #c2c2c2;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px #000000;
+}
+
+#intensityFader::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    background: #ffffff;
+    cursor: pointer;
+}
+
+#intensityFader:focus::-ms-fill-lower {
+    background: #c2c2c2;
+}
+
+#intensityFader:focus::-ms-fill-upper {
+    background: #c2c2c2;
 }
