Clearer client interface with queue information and updates

--- a/resources/style.css
+++ b/resources/style.css
@@ -34,6 +34,10 @@ hr {
     border: 0;
 }
 
+.modal-header {
+    justify-content: left;
+}
+
 /* Status bar */
 .status {
     background-color: #232628;
