Minor padding adjustment

--- a/resources/style.css
+++ b/resources/style.css
@@ -87,7 +87,7 @@ header {
 .live {
     background-color: #dc3545;
     padding: 0.25rem 0.75rem;
-    margin: 0 0.5rem;
+    margin: 0.5rem;
     border-radius: 5px;
 }
 
