--- a/resources/style.css
+++ b/resources/style.css
@@ -156,7 +156,7 @@ button.active, .radio-button.active {
     width: 75px;
     border-radius: 100px;
     border: 0;
-
+    margin: 0.35rem 0.15rem;
     color: rgba(0, 0, 0, 0);
 }
 
