--- a/resources/style.css
+++ b/resources/style.css
@@ -208,7 +208,7 @@ button.active, .radio-button.active {
 }
 
 #intensityFader::-webkit-slider-thumb {
-    box-shadow: 0px 0px 1px #000000;
+    box-shadow: 0 0 1px #000000;
     border: 1px solid #000000;
     height: 40px;
     width: 40px;
@@ -235,7 +235,7 @@ button.active, .radio-button.active {
 }
 
 #intensityFader::-moz-range-thumb {
-    box-shadow: 0px 0px 1px #000000;
+    box-shadow: 0 0 1px #000000;
     border: 1px solid #000000;
     height: 40px;
     width: 40px;
@@ -270,7 +270,7 @@ button.active, .radio-button.active {
 
 #intensityFader::-ms-thumb {
     margin-top: 1px;
-    box-shadow: 0px 0px 1px #000000;
+    box-shadow: 0 0 1px #000000;
     border: 1px solid #000000;
     height: 40px;
     width: 40px;
